examples/neg/TernaerOper-Neg4.iml
// syntax error 2 expr1
program ternaereOperatorNeg()
do
  debugout true ? : 2
endprogram